--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,18 @@ services:
       interval: 5s
       timeout: 3s
       retries: 5
+      
+  redis:
+    image: redis:7-alpine
+    container_name: oauth-redis
+    ports:
+      - "6379:6379"
+    command: redis-server --save 60 1 --loglevel warning
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
   postgres_data:
